project (EBOOK-TOOLS)

set(BUILD_SHARED_LIBS On)
#set(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(LIBRARY_OUTPUT_PATH ${EBOOK-TOOLS_BINARY_DIR}/libs)
set(EXECUTABLE_OUTPUT_PATH ${EBOOK-TOOLS_BINARY_DIR}/bin)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

find_package(LibXml2 REQUIRED)
find_package(LibZip REQUIRED)


INCLUDE("${CMAKE_MODULE_PATH}/TargetDoc.cmake" OPTIONAL)

add_subdirectory (src)
